<resources>
    <string name="app_name">Grocery App</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account_click_to_log_in">Already have account? click here to log In</string>
    <string name="don_t_have_account_click_here_to_sign_up">Don\'t have account? click here to Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="product_tittle">Product Tittle</string>
    <string name="product_image">Product Image</string>
    <string name="rs">Rs.</string>
    <string name="no_results_found">No Results Found!</string>
    <string name="mall">Mall</string>
    <string name="grocery_official">Grocery Official</string>
    <string name="available">Available:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="see_details">See Details</string>
    <string name="no_items_here_on_your_cart_yet">No Items Here on Your Cart Yet!</string>
    <string name="just_for_you">*** Just For You ***</string>
    <string name="categories">Categories:</string>
    <string name="description">Description:</string>
    <string name="add_custom_category_here">Add Custom Category here</string>
    <string name="add">Add</string>
    <string name="read_more">Read more</string>
    <string name="check_out">Check Out</string>
    <string name="if_the_sub_total_is_incorrect_so_please_refresh_the_page_for_the_correct_sub_total">If the Sub Total is Incorrect so Please Refresh the Page for the correct Sub Total.</string>
    <string name="my_wishlists">My Wishlist</string>
    <string name="wishlist_items">WishList Items</string>
    <string name="cart_items">Cart Items</string>
    <string name="my_cartlist">My Cartlist</string>
    <string name="order_now">Order Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="pricing">Pricing:</string>
    <string name="total">Total:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="buying_items">Buying Items:</string>
    <string name="quantity">Quantity:</string>
    <string name="delivered">Delivered</string>
    <string name="out_for_delivery">Out for Delivery</string>
    <string name="shipped">Shipped</string>
    <string name="processing">Processing</string>
    <string name="all_orders">All Orders</string>
    <string name="orders">Orders</string>
    <string name="order_details">Order Details</string>
    <string name="status">Status:</string>
    <string name="hint_0f_written_review">How\'s the quality of Product? Is it Worth its Price?</string>
    <string name="to_shipped">To Shipped</string>
    <string name="to_delivered">To Delivered</string>
    <string name="to_review">To Review</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="log_out">Log Out</string>

</resources>