<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardBackgroundColor="@color/cardview_light_background">

    <LinearLayout
        android:id="@+id/productHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/product_image"
            />

        <TextView
            android:id="@+id/txtProductTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="13sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="3dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/product_tittle"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                android:textSize="15dp"
                />
            <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imgAddCart"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_gravity="center"
                android:focusable="true"
                android:clickable="true"
                android:background="?selectableItemBackground"
                app:srcCompat="@drawable/shopping_cart_icon" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        <ImageView
            android:id="@+id/imgWishList"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:clickable="true"
            android:background="?selectableItemBackground"
            app:srcCompat="@drawable/wishlist_icon" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>