<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.CartFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/checkoutHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:visibility="visible"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="Sub Total:"/>

        <TextView
            android:id="@+id/txtSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text=""/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    <Button
        android:id="@+id/btnCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/app_icon"
        android:text="@string/check_out"
     />


    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/checkoutHolder">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNoItemsHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:visibility="visible"
                android:textColor="#FF1904"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:text="@string/no_items_here_on_your_cart_yet"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCartProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNoItemsHere"
                android:background="@color/recycler_view_bg"/>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:layout_below="@id/rvCartProducts"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/txtJustForYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/just_for_you"
                android:textColor="@color/app_icon"
                android:textStyle="italic"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:layout_below="@id/divider6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAllProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtJustForYou"
                android:layout_marginTop="20dp"
                android:background="@color/recycler_view_bg"/>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>



</RelativeLayout>